# rtop

./: Cargo.toml  README.md
src/: main.rs
src/process/: gather_process_info.rs  get_process_list.rs  get_process_mem.rs  get_process_name.rs  get_process_username.rs  mod.rs  process.rs
src/system/: get_cpu_and_mem_usage.rs  get_cpu_load_aggregate.rs  get_cpu_name.rs  get_system_stats.rs  mod.rs
src/utils/: mod.rs
