[package]
name = "rtop"
version = "0.1.0"
authors = ["Rich Wandell <richwandell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18.2"
winapi = { version = "0.3.9", features = ["winuser", "tlhelp32", "processthreadsapi", "securitybaseapi", "handleapi", "winbase", "winnt"] }
sysinfo = "0.15.3"
libc = "0.2.66"
systemstat = "0.1.6"
gethostname = "0.2.1"
term_size = "0.3.2"